InsuranceOrg/force-app/main/default/objects/vlocity_ins__ActivityContentDocument__c/vlocity_ins__ActivityContentDocument__c.object-meta.xml
<CustomObject>
    <description>Associates Salesforce CRM content to a given sales or marketing activity, such as a meeting with a prospective customer. For example, an entry might associate a product benefits whitepaper with an activity that represents a call report.</description>
    <label>Activity Content Document</label>
    <nameField>
        <label>Activity Content Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activity Content Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>