InsuranceOrg/force-app/main/default/objects/vlocity_ins__ActivityContentDocument__c/fields/vlocity_ins__ActivityId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ActivityId__c</fullName>
    <label>Activity</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>