InsuranceOrg/force-app/main/default/objects/vlocity_ins__ActivityContentDocument__c/fields/vlocity_ins__ContentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ContentDocumentId__c</fullName>
    <label>Content Document</label>
    <length>18</length>
    <type>Text</type>
</CustomField>