InsuranceOrg/force-app/main/default/objects/vlocity_ins__ActivityContentDocument__c/fields/vlocity_ins__ContentURL__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ContentURL__c</fullName>
    <label>Content URL</label>
    <type>Url</type>
</CustomField>